--- a/package.json
+++ b/package.json
@@ -10,24 +10,23 @@
     },
     "dependencies": {
         "dayjs": "^1.10.7",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
-        "react-icons": "^4.2.0",
-        "react-router-dom": "^5.3.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
+        "react-router-dom": "6"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "5.14.1",
-        "@testing-library/react": "12.0.0",
-        "@testing-library/react-hooks": "7.0.2",
-        "@types/jest": "27.0.1",
-        "@types/node": "^16.7.10",
-        "@types/react": "^17.0.24",
-        "@types/react-dom": "^17.0.9",
-        "@types/react-router-dom": "^5.3.0",
-        "@vitejs/plugin-react-refresh": "^1.3.1",
-        "jest": "^27.2.0",
-        "esbuild-jest": "0.5.0",
-        "typescript": "^4.3.2",
-        "vite": "^2.5.4"
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/react-hooks": "^7.0.2",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.5",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "@vitejs/plugin-react": "^1.0.7",
+        "esbuild-jest": "^0.5.0",
+        "jest": "^27.4.5",
+        "typescript": "^4.5.4",
+        "vite": "^2.7.2"
     }
 }
